# the

./: .dockerignore  .gitignore  API  AST.cpp  AST.hpp  AnonMap.cpp  AnonMap.hpp  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Codegen.cpp  Codegen.hpp  Dockerfile  Error.cpp  Error.hpp  Foundation.hpp  GRAMMAR.md  INSTALLATION.md  Lexer.cpp  Lexer.hpp  Makefile  Parser.cpp  Parser.hpp  README.md  RELEASE.md  Reader.hpp  SECURITY.md  TypeMap.cpp  TypeMap.hpp  TypedMap.cpp  TypedMap.hpp  VarMap.cpp  VarMap.hpp  _program  async-programming.c  configure.sh  default.profraw  entrypoint.sh  main.cpp  old-api.md  (+6 more)
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cross-compile.yml  deploy.yml  main.yml  packages.yml  release.yml  test-linux.yml  test-macos.yml  test-windows.yml  test.yml
data/: codegen-metadata-custom.txt  codegen-metadata-unix.txt  codegen-metadata-win.txt  codegen-metadata.txt
examples/: 1_hello_world  2_fibonacci  3_quicksort  4_fizzbuzz  6_factorial  README.md  term-pretty-waves
lab/: 0.s  0_empty.s  0_s.s  1.c  1.m  1.s  1_c.c  1_c.s  1_hello_world.s  1_s.s  2.m  2.s  2_m.m  api.md  asm  asm.sh
new-lang/: _todo  arguments  error  location  main  reader  token  tokenizer  types  utils
new-src/: README.md  _arguments_types  _location_types  _reader_types  _todo  _token_enums  _token_types  _tokenizer_types  arguments  build.sh  error  location  main  reader  token  tokenizer  y_main  z_main
scripts/: c-generate-declarations.py  codegen-playground.js  collect-std-usage  collect-std-usage.js  concat-api-files  docker-entrypoint.sh  find-duplicates.py  generate-api-docs  generate-api-docs.sh  generate-type-map  mount-git-hooks.sh  pre-process-codegen  pre-process-codegen.js  update-tests.py  validate-tests-registered  validate-tests-registered.js
src/: AST.cpp  AST.hpp  ASTChecker.hpp  ASTExpr.cpp  ASTExpr.hpp  ASTNode.cpp  ASTNode.hpp  CParser.cpp  CParser.hpp  Codegen.cpp  Codegen.hpp  CodegenAPIItem.hpp  CodegenCleanUp.cpp  CodegenCleanUp.hpp  Error.cpp  Error.hpp  Expr.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  ParserComment.cpp  ParserComment.hpp  ParserExpr.cpp  ParserExpr.hpp  ParserStmt.cpp  ParserStmt.hpp  ParserType.cpp  ParserType.hpp  Reader.cpp  Reader.hpp  ReaderLocation.cpp  ReaderLocation.hpp  Stmt.hpp  SyntaxError.cpp  SyntaxError.hpp  Token.cpp  Token.hpp  Type.cpp  Type.hpp  (+49 more)
src/api/: any  arr  array  bool  buffer  byte  char  date  enum  error  float  fn  fs  global  globals  int  map  math  obj  opt  os  path  process  random  ref  request  str  thread  union  url  utils  void
src/codegen/: any.cpp  block.cpp  bool.cpp  buffer.cpp  buffer.hpp  byte.cpp  char.cpp  char.hpp  date.cpp  enum.cpp  error.cpp  error.hpp  expr-access.cpp  expr-array.cpp  expr-as.cpp  expr-assign.cpp  expr-await.cpp  expr-binary.cpp  expr-call.cpp  expr-closure.cpp  expr-cond.cpp  expr-is.cpp  expr-lit.cpp  expr-map.cpp  expr-obj.cpp  expr-ref.cpp  expr-unary.cpp  float.cpp  fn-decl.cpp  fs.cpp  fs.hpp  globals.cpp  helpers.cpp  int.cpp  int.hpp  metadata.hpp  node-break.cpp  node-continue.cpp  node-enum-decl.cpp  node-export-decl.cpp  (+33 more)
src/codegen-api/: any.cpp  any.hpp  bool.cpp  bool.hpp  byte.cpp  byte.hpp  date.cpp  date.hpp  enum.cpp  enum.hpp  error.cpp  float.hpp  fs.cpp  globals.hpp  int.cpp  os.cpp  path.cpp  process.cpp  process.hpp  random.cpp  random.hpp  request.cpp  request.hpp  str.cpp  thread.cpp  thread.hpp  url.cpp  utils.cpp
src/codegen-ast/: CodegenAST.hpp  CodegenASTExpr.cpp  CodegenASTStmt.cpp  CodegenASTType.cpp
src/lexer/: bracket.c  bracket.h  comment-block.c  comment-block.h  comment-line.c  comment-line.h  id.c  id.h  keyword.c  keyword.h  lit-char.c  lit-char.h  lit-float.c  lit-float.h  lit-id.c  lit-id.h  lit-int-bin.c  lit-int-bin.h  lit-int-dec.c  lit-int-dec.h  lit-int-hex.c  lit-int-hex.h  lit-int-oct.c  lit-int-oct.h  lit-int.c  lit-int.h  lit-str.c  lit-str.h  litfloat.c  litfloat.h  litint.c  litint.h  litstr.c  litstr.h  mark.c  mark.h  op.c  op.h  ws.c  ws.h
src/new-codegen/: str.c  str.h
src/parser/: arglist.c  arglist.h  call-expr.c  call-expr.h  expr.c  expr.h  id.c  id.h  literal.c  literal.h  ws.c  ws.h
test/: ASTCheckerTest.cpp  ASTExprTest.cpp  ASTTest.cpp  CParserTest.cpp  CodegenASTTest.cpp  CodegenCleanUpTest.cpp  CodegenTest.cpp  ErrorTest.cpp  LexerTest.cpp  MockAST.cpp  MockAST.hpp  MockLexer.cpp  MockLexer.hpp  MockParser.cpp  MockParser.hpp  MockReader.cpp  MockReader.hpp  ParserCommentTest.cpp  ParserDocTest.cpp  ParserExprTest.cpp  ParserTest.cpp  ParserTypeTest.cpp  ReaderTest.cpp  TokenTest.cpp  TypeMapTest.cpp  TypeMatchTest.cpp  TypeTest.cpp  UtilsTest.cpp  VarMapTest.cpp  VarStackTest.cpp  utils.cpp  utils.hpp
test/ast-test/: expr-access-elem.txt  expr-access-member.txt  expr-access-prop.txt  expr-access.txt  expr-array-root.txt  expr-array.txt  expr-as.txt  expr-assign.txt  expr-await.txt  expr-binary-type-casts.txt  expr-binary.txt  expr-call-args.txt  expr-call.txt  expr-closure-call.txt  expr-closure-stack.txt  expr-closure.txt  expr-cond-any.txt  expr-cond-map.txt  expr-cond-opt.txt  expr-cond-type-casts.txt  expr-cond-union.txt  expr-cond.txt  expr-is-type-casts.txt  expr-is-type-casts2.txt  expr-is.txt  expr-lit-nil.txt  expr-lit.txt  expr-map.txt  expr-obj-member.txt  expr-obj.txt  expr-ref-fn.txt  expr-ref.txt  expr-unary.txt  node-break.txt  node-const-decl.txt  node-continue.txt  node-empty.txt  node-enum-decl.txt  node-export.txt  node-expr-lit.txt  (+125 more)
test/codegen-test/: builtin-any-alloc-alias.txt  builtin-any-alloc-any.txt  builtin-any-alloc-array.txt  builtin-any-alloc-enum.txt  builtin-any-alloc-fn-async.txt  builtin-any-alloc-fn.txt  builtin-any-alloc-map.txt  builtin-any-alloc-obj.txt  (+1457 more)
tests/: ErrorTest.cpp  LexerTest.cpp  ReaderMock.hpp  ReaderTest.cpp  SyntaxErrorTest.cpp  TokenTest.cpp  array-test.c  ast-test.c  binary-test.c  codegen-macos-test.c  codegen-test.c  fs-test.c  lexer-test.c  lexer-test.h  parser-test.c  parser-test.h  testing.h  utilities.h
(+381 files in other folders)
